feat: .env에 DB 설정하게 변경

--- a/app/.env
+++ b/app/.env
@@ -1,2 +1,8 @@
-DATABASE_USER=test
-DATABASE_PASSWORD=test
+DATABASE_HOST=db
+DATABASE_PORT=3306
+USERNAME=root
+PASSWORD=docker123
+DATABASE=nest
+LOGGING=false
+ENTITIES=./dist/**/**/*.entity{.ts,.js}
+SYNCHRONIZE=true
