--- a/app/package.json
+++ b/app/package.json
@@ -29,7 +29,8 @@
     "mysql2": "^3.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.3.12"
+    "typeorm": "^0.3.12",
+    "typeorm-transactional": "^0.4.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
